# rusty-celery

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HACKING_QUICKSTART.md  Makefile  README.md  RELEASE_GUIDE.md  dev-requirements.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  rust.yml
celery-codegen/: Cargo.toml
celery-codegen/src/: error.rs  lib.rs  task.rs
examples/: beat_app.rs  beat_consumer.rs  celery.rs  celery_app.py  celery_app.rs  python_to_rust.sh  runtime_benchmark.rs  runtime_benchmark.sh  rust_to_python.sh
examples/advanced/: README.md
examples/advanced/src/: main.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/beat_app/: Cargo.toml  README.md
examples/generic/: Cargo.toml  README.md
scripts/: generate_release_notes.py  prepare_changelog.py  release.sh
scripts/backends/: mongodb.sh
scripts/brokers/: amqp.sh  redis.sh
src/: codegen.rs  error.rs  export.rs  lib.rs  prelude.rs  routing.rs
src/app/: mod.rs  routing.rs  tests.rs  trace.rs
src/backend/: empty.rs  mock.rs  mod.rs  mongo.rs  redis.rs
src/beat/: backend.rs  mod.rs  schedule.rs  scheduled_task.rs  scheduler.rs  tests.rs
src/beat/schedule/: cron.rs  mod.rs
src/beat/schedule/cron/: mod.rs  parsing.rs  time_units.rs
src/broker/: amqp.rs  mock.rs  mod.rs  redis.rs
src/protocol/: mod.rs  tests.rs
src/scheduler/: mod.rs
src/task/: async_result.rs  mod.rs  options.rs  request.rs  signature.rs
tests/: broker_amqp_test.rs  codegen.rs  codegen_test.rs  integrations.rs
tests/app_codegen/: mod.rs
tests/backends/: mod.rs  mongo.rs  redis.rs
tests/beat_codegen/: mod.rs
tests/broker/: mod.rs
tests/brokers/: amqp.rs  mod.rs  redis.rs
tests/task_codegen/: mod.rs
