[workspace]
members = ["./", "celery-codegen"]

[package]
name = "celery"
version = "0.4.0-rc4"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["celery", "amqp", "rabbitmq", "background-jobs"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rusty-celery/rusty-celery"
homepage = "https://github.com/rusty-celery/rusty-celery"
description = "Rust implementation of Celery"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "celery"
path = "src/lib.rs"

[[example]]
name = "celery_app"

[dependencies]
chrono = "0.4"
tokio = { version = "0.2.13", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rmp-serde = { version = "0.14", optional = true }
rmpv = { version = "0.4.5", optional = true, features = ["with-serde"] }
serde_yaml = { version = "0.8", optional = true }
serde-pickle = { version = "0.6", optional = true }
thiserror = "1.0"
async-trait = "0.1"
lapin = "1.2.7"
tokio-amqp = "0.1.3"
log = "0.4"
futures = { version = "0.3", features = ["async-await"] }
uuid = { version = "0.8", features = ["v4"]}
rand = "0.7"
celery-codegen = { version = "0.4.0-rc4", path = "./celery-codegen", optional = true }
colored = "2"
once_cell = { version = "1.3.1", optional = true }
globset = "0.4"
hostname = "0.3.0"

[dev-dependencies]
rmp-serde = "0.14"
rmpv = { version = "0.4.5", features = ["with-serde"] }
serde_yaml = "0.8"
serde-pickle = "0.6"
env_logger = "0.8"
anyhow = "1.0"
structopt = "0.3"

[features]
default = ["codegen"]
codegen = ["celery-codegen", "once_cell"]
extra_content_types = ["rmp-serde", "rmpv", "serde_yaml", "serde-pickle"]
