[workspace]
members = ["./", "celery-codegen"]

[package]
name = "celery"
version = "0.4.0-rcn.11"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["celery", "amqp", "rabbitmq", "background-jobs"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rusty-celery/rusty-celery"
homepage = "https://github.com/rusty-celery/rusty-celery"
description = "Rust implementation of Celery"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "celery"
path = "src/lib.rs"

[[example]]
name = "celery_app"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0.0", features = ["full"]}
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
tokio-stream = "0.1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rmp-serde = { version = "0.15", optional = true }
rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
serde_yaml = { version = "0.8", optional = true }
serde-pickle = { version = "1.1", optional = true }
thiserror = "1.0"
async-trait = "0.1"
lapin = "2.0.0"
log = "0.4"
futures = { version = "0.3", features = ["async-await"] }
uuid = { version = "0.8", features = ["v4"]}
rand = "0.8"
celery-codegen = { version = "0.4.0-rcn.11", path = "./celery-codegen", optional = true }
colored = "2"
once_cell = { version = "1.3.1" }
globset = "0.4"
hostname = "0.3.0"
redis = { version = "0.21.1", features=["connection-manager", "tokio-comp"] }

[dev-dependencies]
rmp-serde = "0.15"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde_yaml = "0.8"
serde-pickle = "1.1"
env_logger = "0.9"
anyhow = "1.0"
structopt = "0.3"

[features]
default = ["codegen"]
codegen = ["celery-codegen"]
extra_content_types = ["rmp-serde", "rmpv", "serde_yaml", "serde-pickle"]
