[workspace]
members = ["./", "celery-codegen"]

[package]
name = "celery"
version = "0.5.5"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["celery", "amqp", "rabbitmq", "background-jobs"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rusty-celery/rusty-celery"
homepage = "https://github.com/rusty-celery/rusty-celery"
description = "Rust implementation of Celery"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "celery"
path = "src/lib.rs"

[[example]]
name = "celery_app"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4.30", features = ["serde"] }
tokio = { version = "1.25", features = ["full"]}
tokio-stream = "0.1.9"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.25"
rmp-serde = { version = "1.1", optional = true }
rmpv = { version = "1.0", optional = true, features = ["with-serde"] }
serde_yaml = { version = "0.9", optional = true }
serde-pickle = { version = "1.1", optional = true }
thiserror = "1.0.2"
async-trait = "0.1.43"
lapin = { version = "2.1.1", default-features = false }
log = "0.4"
futures = { version = "0.3", features = ["async-await"] }
uuid = { version = "1.3", features = ["v4"]}
rand = "0.8"
celery-codegen = { version = "0.5.5", path = "./celery-codegen", optional = true }
colored = "2"
once_cell = { version = "1.17" }
globset = "0.4"
hostname = "0.3"
redis = { version = "0.22", features=["connection-manager", "tokio-comp"] }
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
futures-lite = "1.12"

[dev-dependencies]
rmp-serde = "1.1"
rmpv = { version = "1.0", features = ["with-serde"] }
serde_yaml = "0.9"
serde-pickle = "1.1"
env_logger = "0.10"
anyhow = "1.0.14"
structopt = "0.3"

[features]
default = ["codegen", "rustls"]
codegen = ["celery-codegen"]
extra_content_types = ["rmp-serde", "rmpv", "serde_yaml", "serde-pickle"]
native-tls = ["lapin/native-tls"]
rustls = ["lapin/rustls"]
