[package]
name = "celery-codegen"
version = "0.1.0-alpha.5"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rusty-celery/rusty-celery"
homepage = "https://github.com/rusty-celery/rusty-celery"
description = "Macros for rusty-celery"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full", "visit-mut"]}
