[package]
name = "celery-codegen"
version = "0.5.3"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rusty-celery/rusty-celery"
homepage = "https://github.com/rusty-celery/rusty-celery"
description = "Macros for rusty-celery"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit-mut"]}
