[package]
name = "generic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celery = "0.5.3"
anyhow = "1.0.72"
serde = "1.0.183"
structopt = "0.3.26"
dotenvy = "0.15.7"
tokio = {version="1.29.1", features=["macros", "rt-multi-thread"]}
env_logger = "0.10.0"
async-trait = "0.1.72"
